# watch-gh-actions

./: CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml  install.sh  setup.sh
.claude/: settings.json
.claude/agents/: README.md  arch-analyzer.md  bug-reviewer.md  comment-reviewer.md  error-hunter.md  test-analyzer.md  type-analyzer.md
.claude/rules/: architecture.md  async-patterns.md  code-organization.md  documentation.md  error-handling.md  git-workflow.md  security.md  testing.md
.claude/skills/code-quality/: SKILL.md
.githooks/: pre-commit  pre-push  pushb.sh
.github/workflows/: ci.yml  release.yml
blogs/: opus-vs-sonnet-code-review.md
crates/ciw-core/: Cargo.toml
crates/ciw-core/src/: app.rs  diff.rs  events.rs  input.rs  lib.rs  platform.rs  poller.rs  traits.rs
crates/ciw-core/src/tui/: confirm_overlay.rs  header.rs  log_overlay.rs  mod.rs  render.rs  spinner.rs  startup.rs  tree.rs
crates/ghw/: Cargo.toml  build.rs
crates/ghw/src/: cli.rs  executor.rs  lib.rs  main.rs  parser.rs
crates/ghw/tests/: fixtures.rs  integration.rs
crates/glw/: Cargo.toml
crates/glw/src/: cli.rs  executor.rs  main.rs  parser.rs
plans/: 01-exploration-and-comparison.md  02-implementation-plan.md  architecture.md  execution-strategy.md  verification-report.md
scripts/: model-compare.sh
src/: app.rs  cli.rs  diff.rs  events.rs  input.rs  lib.rs  main.rs  notify.rs
src/gh/: executor.rs  mod.rs  parser.rs  poller.rs
src/tui/: detail_overlay.rs  footer.rs  header.rs  log_overlay.rs  mod.rs  render.rs  spinner.rs  startup.rs  tree.rs
tests/: fixtures.rs  integration.rs
