[package]
name = "ghw"
version = "0.4.2"
edition = "2021"
description = "GitHub Actions Watcher TUI"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
unicode-width = "0.2"
notify-rust = "4"

[dev-dependencies]
pretty_assertions = "1"
