[package]
name = "ghw"
version = "0.6.12"
edition = "2021"
description = "GitHub Actions Watcher TUI"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
unicode-width = "0.2"
notify-rust = { version = "4", optional = true }

[features]
default = ["desktop-notify"]
desktop-notify = ["dep:notify-rust"]

[dev-dependencies]
pretty_assertions = "1"
