[package]
name = "ciw-core"
version = "0.8.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
unicode-width = "0.2"
async-trait = "0.1"
notify-rust = { version = "4", optional = true }

[features]
default = ["desktop-notify"]
desktop-notify = ["dep:notify-rust"]
