[package]
name = "ghw"
version = "0.8.0"
edition = "2021"
description = "GitHub Actions Watcher TUI"
license = "MIT"

[dependencies]
ciw-core = { path = "../ciw-core" }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
ratatui = "0.30"
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1"
